# briefly

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ai-review.yml  ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3214505864a0_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  feed_agent.py  gemini_scraper.py  research_agent.py  scraper_agent.py
backend/app/api/v1/: articles.py  dashboards.py  feeds.py  research.py  router.py  settings.py  sources.py
backend/app/constants/: settings_defaults.py
backend/app/db/: __init__.py  dynamodb.py  postgres.py
backend/app/models/: __init__.py  article.py  dashboard.py  dashboard_source.py  feed.py  user.py
backend/app/schemas/: article.py  dashboard.py  feed.py  source.py
backend/app/services/: __init__.py  article_service.py  feed_service.py  search_service.py
backend/scripts/: ai_reviewer.py
backend/tests/: test_health.py
docs/: claude-scraping-guide.md  design_guide.md  dynamodb-guide.md  frontend-learning-guide.md  hybrid-architecture.md  nl-interpretation-guide.md  nosql-learning-guide.md  research-agent-guide.md  testing-guide.md
infra/: README.md  app.py  cdk.json
infra/stacks/: __init__.py  backend_stack.py  database_stack.py
